--- a/stm32_calibrate_station.ioc
+++ b/stm32_calibrate_station.ioc
@@ -21,20 +21,23 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=RTC
 Mcu.IP5=SYS
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP6=USART1
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F401R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
 Mcu.Pin10=PA8
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PB6
-Mcu.Pin14=PB7
-Mcu.Pin15=VP_RTC_VS_RTC_Activate
-Mcu.Pin16=VP_RTC_VS_RTC_Calendar
-Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB6
+Mcu.Pin16=PB7
+Mcu.Pin17=VP_RTC_VS_RTC_Activate
+Mcu.Pin18=VP_RTC_VS_RTC_Calendar
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PH0 - OSC_IN
 Mcu.Pin3=PH1 - OSC_OUT
 Mcu.Pin4=PC2
@@ -43,7 +46,7 @@ Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=18
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RBTx
@@ -59,6 +62,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=PUMP
@@ -67,6 +71,8 @@ PA0-WKUP.Signal=GPIO_Output
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=LEVEL
 PA1.Signal=ADCx_IN1
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -79,6 +85,8 @@ PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=GUN_SWITCH
 PA8.Locked=true
 PA8.Signal=GPIO_Input
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
@@ -130,7 +138,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=42000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -164,6 +172,8 @@ RTC.Format=RTC_FORMAT_BIN
 RTC.IPParameters=Format
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
